[package]
name = "yubico"
version = "0.8.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>", "Pierre Larger <pierre.larger@gmail.com>"]
edition = "2018"

description = "Yubikey client API library"
license = "MIT OR Apache-2.0"
keywords = ["yubikey", "authentication", "encryption", "OTP", "Challenge-Response"]
categories = ["authentication"]
repository = "https://github.com/wisespace-io/yubico-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/yubico-rs" }

[lib]
name = "yubico"
path = "src/lib.rs"

[dependencies]
base64 = "0.10"
crypto-mac = "0.7"
futures = {version = "0.1.23", optional = true}
hmac = "^0.7"
rand = "0.6"
reqwest = "0.9"
sha-1 = "0.8"
subtle = "2.0"
threadpool = "1.7"
url = "1.7"

[dev-dependencies]
tokio = "0.1"
futures = "0.1.23"

[features]
default = ["online-tokio"]
online-tokio = ["futures"]