[package]
name = "yubico"
version = "0.9.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>", "Pierre Larger <pierre.larger@gmail.com>"]
edition = "2018"

description = "Yubikey client API library"
license = "MIT OR Apache-2.0"
keywords = ["yubikey", "authentication", "encryption", "OTP", "Challenge-Response"]
categories = ["authentication"]
repository = "https://github.com/wisespace-io/yubico-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/yubico-rs" }

[lib]
name = "yubico"
path = "src/lib.rs"

[dependencies]
base64 = "0.12"
crypto-mac = "0.7"
futures = { version = "0.3", optional = true }
hmac = "^0.7"
rand = "0.6"
reqwest = { version = "0.10", features = ["blocking"] }
sha-1 = "0.8"
subtle = "2.2"
threadpool = "1.8"
url = "1.7"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3"

[features]
default = ["online-tokio"]
online-tokio = ["futures"]