[package]
name = "yubico"
version = "0.10.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>", "Pierre Larger <pierre.larger@gmail.com>"]
edition = "2018"

description = "Yubikey client API library"
license = "MIT OR Apache-2.0"
keywords = ["yubikey", "authentication", "encryption", "OTP", "Challenge-Response"]
categories = ["authentication"]
repository = "https://github.com/wisespace-io/yubico-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/yubico-rs" }

[lib]
name = "yubico"
path = "src/lib.rs"

[dependencies]
base64 = "0.13"
futures = { version = "0.3", optional = true }
hmac = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
sha1 = "0.10"
threadpool = "1.7"
form_urlencoded = "1"

[dev-dependencies]
tokio = { version = "1.1", features = ["macros"] }
futures = "0.3"

[features]
default = ["online-tokio"]
online-tokio = ["futures"]
