[package]
name = "yubico-app"
version = "0.4.2"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]

[[bin]]
name = "otp"
path = "src/otp.rs"

[[bin]]
name = "otp_custom"
path = "src/otp_custom.rs"

[[bin]]
name = "configuration_hmac"
path = "src/configuration_hmac.rs"

[[bin]]
name = "challenge_response_hmac"
path = "src/challenge_response_hmac.rs"

[[bin]]
name = "configuration_otp"
path = "src/configuration_otp.rs"

[[bin]]
name = "challenge_response_otp"
path = "src/challenge_response_otp.rs"

[dependencies]
hex = "0.3.2"
rand = "0.5.3"
yubico = { path = "../" }
